# imguiSuperglide

./: CMakeLists.txt  Handoff.txt  README.md  README.mdgit  Superglide.txt  tool.ps1
src/: InputHandler.cpp  InputHandler.h  TrainerLogic.cpp  TrainerLogic.h  imconfig.h  main.cpp
